feat: salary moduel, seed
